--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,67 @@ fabric.properties
 # 3D Images
 *.3dm
 *.max
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/chess_masters_WCC.pgn.bz2
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/hartford_drug.edgelist
+/pyenv/share/man/man1/ipython.1.gz
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/knuth_miles.txt.gz
+/pyenv/share/doc/networkx-2.6.3/LICENSE.txt
+/pyenv/share/doc/networkx-2.6.3/examples/3d_drawing/mayavi2_spring.py
+/pyenv/share/doc/networkx-2.6.3/examples/subclass/plot_antigraph.py
+/pyenv/share/doc/networkx-2.6.3/examples/3d_drawing/plot_basic.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_beam_search.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_betweenness_centrality.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_blockmodel.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_chess_masters.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_circuits.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_custom_node_icons.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_davis_club.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_dedensification.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_degree.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_degree_sequence.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_directed.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_edge_colormap.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_ego_graph.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_eigenvalues.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_erdos_renyi.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_expected_degree_sequence.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_football.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_four_grids.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_house_with_colors.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_iterated_dynamical_systems.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_karate_club.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_knuth_miles.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_krackhardt_centrality.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_labels_and_colors.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_multipartite_graph.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_napoleon_russian_campaign.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_node_colormap.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_parallel_betweenness.py
+/pyenv/share/doc/networkx-2.6.3/examples/subclass/plot_printgraph.py
+/pyenv/share/doc/networkx-2.6.3/examples/basic/plot_properties.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_rainbow_coloring.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_random_geometric_graph.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_rcm.py
+/pyenv/share/doc/networkx-2.6.3/examples/basic/plot_read_write.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_roget.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_sampson.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_selfloops.py
+/pyenv/share/doc/networkx-2.6.3/examples/basic/plot_simple_graph.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_simple_path.py
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/plot_snap.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_spectral_grid.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_unix_email.py
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/plot_weighted_graph.py
+/pyenv/share/doc/networkx-2.6.3/examples/graph/plot_words.py
+/pyenv/share/doc/networkx-2.6.3/examples/3d_drawing/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/basic/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/graph/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/subclass/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/README.txt
+/pyenv/share/doc/networkx-2.6.3/examples/graph/roget_dat.txt.gz
+/pyenv/share/man/man1/ttx.1
+/pyenv/share/doc/networkx-2.6.3/examples/drawing/unix_email.mbox
+/pyenv/share/doc/networkx-2.6.3/examples/graph/words_dat.txt.gz
+/pyenv/share/doc/networkx-2.6.3/examples/algorithms/WormNet.v3.benchmark.txt
